add link to code

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <h3>As you can see, it is far from complete!</h3>
       <p>I started the project with almost no Unity (the game engine used here) experience, having only made one 2D game jam game in it a few years ago, so getting up to speed on making a 3D Unity game took some time. I also have no Blender experience, so making the few very simple models you see here took quite a while. Also, the cloth simulation module that ships with Unity does not do a few crucial things that I was banking on it doing! Sooooo, this is a very, very rough prototype.</p>
       <p>All that said, I think it was a good learning experience, and I think if you watch the embedded video here you can get something of a sense of what the complete game might look like. I doubt I will continue working on this after turning in the assignment, but who knows! If I get a strong response that it deserves getting turned into a real game, I'll think about it.</p>
+      <p><a href="https://github.com/BaseCase/Fold/">(very nasty) code available here</a></p>
       <p class="signature">-Casey, May 2021</p>
     </div>
   </body>
