--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Know When to Fold 'Em</title>
+    <title>Casey Brant - Know When to Fold 'Em</title>
   </head>
   <body>
     <style>
